# lifx-cli

./: .gitignore  LICENSE  README.md  auth.py  colors.py  devices.py  increment_version.sh  lifx  lights.py  list_devices.py  list_scenes.py  pyproject.toml  requirements.txt  scenes.py
.github/workflows/: pylint.yml  pytest.yml  python-publish.yml
.hooks/: pre-commit
src/lifx/: auth.py  colors.py  devices.py  effects.py  lifx.py  lights.py  scenes.py
tests/: lifx_cli_test.py
