[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lifx-cli"
version = "2.5.3"
authors = [{name="Wes Henderson", email="info@necrux.com"}]
description = "The Unofficial LIFX CLI"
readme = "README.md"
requires-python = ">=3.5"
dependencies = [
  'requests',
  'tabulate',
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/necrux/lifx-cli"
"Bug Tracker" = "https://github.com/necrux/lifx-cli/issues"

[project.scripts]
lifx = 'src.lifx.lifx:main'
